# phage_embed_pipeline

./: .gitignore  README.md  pyproject.toml
examples/input_embeddings/: ENA_AB366653_2_183543_180391_246.pt  ENA_AB451219_1_9761_12208_21.pt  ENA_AB597179_1_16127_18232_31.pt  ENA_AB605730_1_116962_119646_192.pt  ENA_AB712291_1_42663_45017_59.pt  ENA_AB720063_2_37014_35296_44.pt  ENA_AB775549_1_15750_17879_26.pt  ENA_AB854109_1_11231_13741_24.pt  ENA_AB910393_1_45261_47225_65.pt  ENA_AB920995_1_13317_15692_32.pt  ENA_AB983711_1_12427_14802_26.pt  ENA_AF189021_1_15502_17244_27.pt  ENA_AF271693_1_34132_32306_41.pt  ENA_AF338467_2_7850_9613_16.pt  ENA_AF543311_2_44122_46089_61.pt  ENA_AM265638_1_11831_14257_21.pt  ENA_AM265639_1_12586_14961_28.pt  ENA_AP008979_1_34085_31704_42.pt  ENA_AP008986_1_40474_42474_63.pt  ENA_AP011616_1_30378_32498_33.pt  ENA_AP011617_1_30261_32381_33.pt  ENA_AP018476_1_31569_29770_43.pt  ENA_AP018486_1_35109_33271_43.pt  ENA_AY095314_2_8943_10928_21.pt  ENA_AY299121_1_33804_31420_43.pt  ENA_AY357582_2_50885_48804_65.pt  ENA_AY369265_2_43861_45828_65.pt  ENA_AY526908_1_36583_38649_41.pt  ENA_AY587007_1_71181_73748_126.pt  ENA_AY682195_1_34783_31817_63.pt  ENA_AY954954_1_29224_31176_34.pt  ENA_AY986977_1_40278_38356_46.pt
examples/input_metadata/: ena_phidra_pasv_validated_polA_metadata.tsv
scripts/: run_pipeline.py
src/phage_emb_pipeline/: _version.py
src/phage_emb_pipeline/utils/: __init__.py  common.py  embeddings.py  logging.py  network.py
