[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phage_emb_pipeline"
version = "0.0.1"
description = "Pipeline for generating and analyzing phage protein embeddings."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Zach Schreiber", email = "zschreib.dev@gmail.com" }
]

dependencies = [
  "torch",
  "numpy",
  "matplotlib",
  "umap-learn",
  "hdbscan",
]

[tool.setuptools.packages.find]
where = ["src"]
